--- a/app/src/main/res/drawable/rounded_corners_button.xml
+++ b/app/src/main/res/drawable/rounded_corners_button.xml
@@ -2,9 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="12dp" /> <!-- Thay đổi giá trị radius tùy theo nhu cầu -->
-    <solid android:color="#D9D9D9"/> <!-- Màu nền của TextView -->
-    <stroke
-        android:width="1dp"
-        android:color="#D9D9D9"/> <!-- Màu viền -->
-</shape>
+    <solid android:color="#80D9D9D9"/> <!-- Màu nền của TextView -->
 
+</shape>
