--- a/app/src/main/res/drawable/rounded_corners_debt.xml
+++ b/app/src/main/res/drawable/rounded_corners_debt.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
 
     <!-- Thiết lập góc bo tròn -->
-    <corners android:radius="20dp" />
+    <corners android:radius="12dp" />
 
     <!-- Màu nền của Button (màu đen) -->
-    <solid android:color="#80D9D9D9"
+    <solid android:color="#333333"
      />
 
 </shape>
