--- a/app/src/main/res/layout/fragment_budget_overview.xml
+++ b/app/src/main/res/layout/fragment_budget_overview.xml
@@ -40,7 +40,7 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#333333"
+                        android:background="#A6AEBF"
                         android:padding="16dp">
 
                         <!-- Nội dung tài chính -->
@@ -126,7 +126,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#333333"
+                    android:background="#A6AEBF"
                     android:orientation="vertical">
 
                     <View
@@ -154,7 +154,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
 
                 <TextView
                     android:layout_width="match_parent"
@@ -171,7 +172,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#333333"
+                android:background="#EEEEEE"
                 android:padding="8dp"
                 android:orientation="vertical">
 
@@ -192,7 +193,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            >
 
             <TextView
                 android:layout_width="match_parent"
@@ -212,7 +214,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#333333"
+            android:background="#EEEEEE"
             android:padding="8dp"
             android:orientation="vertical">
 
