--- a/app/src/main/res/layout/item_debt.xml
+++ b/app/src/main/res/layout/item_debt.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="16dp"
-    android:background="@color/dark_gray">
+    android:padding="8dp"
+    android:layout_marginTop="12dp"
+    android:background="@drawable/rounded_corners_debt_item">
 
     <!-- Biểu tượng danh mục -->
 
     <!-- Nội dung chi tiết -->
     <LinearLayout
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
         android:layout_gravity="center"
         android:layout_marginEnd="16dp"
         android:orientation="horizontal"
@@ -20,63 +22,120 @@
         >
         <ImageView
             android:id="@+id/img_icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="5dp"
             android:src="@drawable/ic_coffee" />
 
     </LinearLayout>
-
-
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Cafe cùng bạn bè"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="100.000.00 ₫"
-            android:textColor="@color/white"
-            android:textSize="14sp" />
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cafe cùng bạn bè"
+                android:textColor="@color/black"
+                android:textSize="10sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_payment_method"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tiền mặt"
-            android:textColor="@color/gray"
-            android:textSize="12sp" />
+            <TextView
+                android:id="@+id/tv_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="12dp"
+                android:text="100.000.00 ₫"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
 
-        <TextView
-            android:id="@+id/tv_date"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tv_payment_method"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Phương thức: Tiền mặt"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+
+            <TextView
+                android:id="@+id/NguonNo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nguồn nợ: Nguyễn Văn A"
+                android:textColor="@color/black"
+                android:textSize="8sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="10/10/2024"
-            android:textColor="@color/gray"
-            android:textSize="12sp" />
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingLeft="4dp"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_NgayNo"
+                android:textSize="8sp"
+                android:text="Ngày nợ: 07/10/2024"
+                android:textColor="@color/black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_NgayDenHan"
+                android:textSize="8sp"
+                android:paddingTop="3dp"
+                android:text="Ngày đến hạn: 07/10/2024"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_TrangThai"
+                android:textSize="8sp"
+                android:text="Trang thái: Đã trả"
+                android:paddingTop="9dp"
+                android:textColor="@color/black"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_NgayTra"
+                android:textSize="8sp"
+                android:text="Ngày trả: 07/10/2024"
+                android:paddingTop="3dp"
+                android:textColor="@color/black"/>
+
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <!-- Nút Xóa -->
-    <ImageButton
-        android:id="@+id/btn_delete"
+    <CheckBox
+        android:id="@+id/btn_tick"
+        android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:layout_gravity="center_vertical"
+        android:checked="false"
+    />
 
-        android:src="@drawable/ic_bin"
-         />
+
+
+
+
+
 </LinearLayout>
