--- a/app/src/main/res/layout/business_report_fragment_storage.xml
+++ b/app/src/main/res/layout/business_report_fragment_storage.xml
@@ -21,6 +21,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
             <Spinner
+                android:id="@+id/spinner_month"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp">
