--- a/app/src/main/res/layout/business_fragment_home.xml
+++ b/app/src/main/res/layout/business_fragment_home.xml
@@ -54,7 +54,7 @@
                         android:layout_marginTop="32dp"
                         android:textStyle="bold"
                         android:textColor="@color/black"
-                        android:text="Da xử lý"
+                        android:text="Đã xử lý"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.496"
                         app:layout_constraintStart_toStartOf="parent"
@@ -124,7 +124,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
-                        android:text="Tạm tính hom nay"
+                        android:text="Tạm tính hôm nay"
                         android:textStyle="bold"
                         android:textColor="@color/black"
                         app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +136,7 @@
                         android:layout_height="40dp"
                         android:background="@drawable/business_shape_green"
                         android:gravity="center"
-                        android:text="Danh Thu: 0"
+                        android:text="Doanh Thu: 0"
                         android:textColor="@color/black"
                         app:layout_constraintEnd_toStartOf="@+id/tv_DonHang"
                         app:layout_constraintStart_toStartOf="parent"
