--- a/app/src/main/res/layout/business_storage_item.xml
+++ b/app/src/main/res/layout/business_storage_item.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_storage_phanloaisp"
-        android:text="Phan loai"
+        android:text="Phân loại"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_storage_ncc"
         />
