--- a/app/src/main/res/layout/business_storage_quanly_khohang_item.xml
+++ b/app/src/main/res/layout/business_storage_quanly_khohang_item.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_storage_quanlykhohang_manhapxuat"
-        android:text="Ma nhap/xuat"
+        android:text="Mã/Nhập xuất"
         android:textSize="20dp"
         android:gravity="center"
         android:textStyle="bold"
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_storage_quanlykhohang_nhapxuat"
-        android:text="Nhap/xuat kho"
+        android:text="Nhập/Xuất kho"
         app:layout_constraintStart_toEndOf="@id/tv_storage_quanlykhohang_manhapxuat"
         app:layout_constraintTop_toTopOf="@id/tv_storage_quanlykhohang_manhapxuat"
         app:layout_constraintBottom_toBottomOf="@id/tv_storage_quanlykhohang_manhapxuat"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_storage_quanlykhohang_soluong"
-        android:text="Sl"
+        android:text="SL"
         app:layout_constraintStart_toEndOf="@id/tv_storage_quanlykhohang_nhapxuat"
         app:layout_constraintTop_toTopOf="@id/tv_storage_quanlykhohang_manhapxuat"
         app:layout_constraintBottom_toBottomOf="@id/tv_storage_quanlykhohang_manhapxuat"
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tv_storage_quanlykhohang_sotien"
-        android:text="So tien"
+        android:text="Số tiền"
         app:layout_constraintStart_toEndOf="@id/tv_storage_quanlykhohang_soluong"
         app:layout_constraintTop_toTopOf="@id/tv_storage_quanlykhohang_manhapxuat"
         app:layout_constraintBottom_toBottomOf="@id/tv_storage_quanlykhohang_manhapxuat"
