--- a/app/src/main/res/layout/business_employee_item.xml
+++ b/app/src/main/res/layout/business_employee_item.xml
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:text="Danh gia"
+        android:text="Đánh giá"
         android:textColor="@android:color/black"
         app:layout_constraintTop_toTopOf="@id/employee_note"
         app:layout_constraintBottom_toBottomOf="@id/employee_note"
