--- a/app/src/main/res/layout/business_fragment_more.xml
+++ b/app/src/main/res/layout/business_fragment_more.xml
@@ -64,8 +64,8 @@
         android:id="@+id/btn_Logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:text="Logout"
+        android:layout_marginStart="8dp"
+        android:text="Đăng xuất"
         app:layout_constraintStart_toEndOf="@+id/tvName"
         app:layout_constraintTop_toTopOf="@+id/tvName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
