--- a/app/src/main/res/layout/business_order_edit_item.xml
+++ b/app/src/main/res/layout/business_order_edit_item.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/et_order_edit_madonhang"
         android:hint="Mã đơn hàng"
+        android:inputType="text"
         android:layout_marginStart="15dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_order_edit_header"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -31,6 +32,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/et_order_edit_tongcong"
         android:hint="Tổng cộng"
+        android:inputType="numberDecimal"
         app:layout_constraintTop_toBottomOf="@id/et_order_edit_madonhang"
         app:layout_constraintStart_toStartOf="@id/et_order_edit_madonhang"
         />
@@ -40,6 +42,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/et_order_edit_thanhtoan"
         android:hint="Thanh toán"
+        android:inputType="numberDecimal"
         app:layout_constraintTop_toBottomOf="@id/et_order_edit_tongcong"
         app:layout_constraintStart_toStartOf="@id/et_order_edit_madonhang"/>
 
@@ -48,6 +51,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/et_order_edit_ghichu"
         android:hint="Ghi chú"
+        android:inputType="text"
         app:layout_constraintTop_toBottomOf="@id/et_order_edit_thanhtoan"
         app:layout_constraintStart_toStartOf="@id/et_order_edit_madonhang"/>
 
