--- a/app/src/main/res/layout/business_product_edit_item.xml
+++ b/app/src/main/res/layout/business_product_edit_item.xml
@@ -1,120 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/tv_product_edit_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_product_edit_header"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
         android:text="Thêm sản phẩm"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
         android:id="@+id/et_product_edit_masp"
-        android:hint="Mã sản phẩm"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_product_edit_header"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:hint="Mã sản phẩm"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_product_edit_header" />
 
     <EditText
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
         android:id="@+id/et_product_edit_giavon"
-        android:hint="Giá vốn"
-        app:layout_constraintTop_toBottomOf="@id/et_product_edit_masp"
-        app:layout_constraintStart_toStartOf="@id/et_product_edit_masp"/>
-
-    <EditText
         android:layout_width="160dp"
         android:layout_height="wrap_content"
+        android:hint="Giá vốn"
+        android:inputType="numberDecimal"
+        app:layout_constraintStart_toStartOf="@id/et_product_edit_masp"
+        app:layout_constraintTop_toBottomOf="@id/et_product_edit_masp" />
+
+    <EditText
         android:id="@+id/et_product_edit_giaban"
-        android:hint="Giá bán"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        app:layout_constraintTop_toTopOf="@id/et_product_edit_giavon"
+        android:hint="Giá bán"
+        android:inputType="numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/et_product_edit_giavon"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
+        app:layout_constraintTop_toTopOf="@id/et_product_edit_giavon" />
 
 
     <EditText
+        android:id="@+id/et_product_edit_ghichu"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:id="@+id/et_product_edit_ghichu"
         android:hint="Ghi chú"
-        app:layout_constraintTop_toBottomOf="@id/et_product_edit_giavon"
-        app:layout_constraintStart_toStartOf="@id/et_product_edit_masp"/>
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="@id/et_product_edit_masp"
+        app:layout_constraintTop_toBottomOf="@id/et_product_edit_giavon" />
 
 
     <Spinner
+        android:id="@+id/sp_product_edit_phanloai"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:id="@+id/sp_product_edit_phanloai"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        app:layout_constraintStart_toEndOf="@id/et_product_edit_ghichu"
-        app:layout_constraintTop_toTopOf="@+id/et_product_edit_ghichu"
         app:layout_constraintBottom_toBottomOf="@id/et_product_edit_ghichu"
         app:layout_constraintEnd_toEndOf="parent"
-        />
-
+        app:layout_constraintStart_toEndOf="@id/et_product_edit_ghichu"
+        app:layout_constraintTop_toTopOf="@+id/et_product_edit_ghichu" />
 
 
     <EditText
+        android:id="@+id/et_product_edit_tensp"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:id="@+id/et_product_edit_tensp"
-        android:hint="Tên sản phẩm"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        app:layout_constraintStart_toEndOf="@id/et_product_edit_masp"
-        app:layout_constraintTop_toTopOf="@+id/et_product_edit_masp"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZàáâãèéêìíòóôõùúýỳĂÂÊÔƠƯăêôưÀÁÂÃÈÉÊÌÍÒÓÔÕÙÚÝỲĐđ "
+        android:hint="Tên sản phẩm"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="@id/et_product_edit_masp"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/et_product_edit_masp"
+        app:layout_constraintTop_toTopOf="@+id/et_product_edit_masp" />
 
     <TextView
-        android:layout_width="89dp"
-        android:layout_height="59dp"
-        android:background="#B0C4C2C2"
         android:id="@+id/tv_product_edit_sl"
-        android:text="So luong: 0"
-        android:textAlignment="center"
+        android:layout_width="89dp"
+        android:layout_height="59dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/et_product_edit_ghichu"
-        app:layout_constraintStart_toStartOf="@id/et_product_edit_ghichu"/>
+        android:background="#B0C4C2C2"
+        android:text="Số lượng: 0"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="@id/et_product_edit_ghichu"
+        app:layout_constraintTop_toBottomOf="@id/et_product_edit_ghichu" />
 
     <TextView
-        android:layout_width="89dp"
-        android:layout_height="59dp"
-        android:background="#B0C4C2C2"
         android:id="@+id/tv_product_edit_daban"
-        android:text="Da ban: 0"
-        android:textAlignment="center"
-        android:layout_marginStart="25dp"
-        app:layout_constraintTop_toTopOf="@id/tv_product_edit_sl"
-        app:layout_constraintStart_toEndOf="@id/tv_product_edit_sl"
-        app:layout_constraintEnd_toStartOf="@id/tv_product_edit_tonkho"/>
-
-    <TextView
         android:layout_width="89dp"
         android:layout_height="59dp"
+        android:layout_marginStart="25dp"
         android:background="#B0C4C2C2"
-        android:id="@+id/tv_product_edit_tonkho"
-        android:text="Ton kho: 0"
+        android:text="Đã bán: 0"
         android:textAlignment="center"
+        app:layout_constraintEnd_toStartOf="@id/tv_product_edit_tonkho"
+        app:layout_constraintStart_toEndOf="@id/tv_product_edit_sl"
+        app:layout_constraintTop_toTopOf="@id/tv_product_edit_sl" />
+
+    <TextView
+        android:id="@+id/tv_product_edit_tonkho"
+        android:layout_width="89dp"
+        android:layout_height="59dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="15dp"
-        app:layout_constraintTop_toTopOf="@id/tv_product_edit_daban"
+        android:background="#B0C4C2C2"
+        android:text="Tồn kho: 0"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_product_edit_daban"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="@id/tv_product_edit_daban" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
