--- a/app/src/main/res/layout/business_quanly_edit_khoanthu_item.xml
+++ b/app/src/main/res/layout/business_quanly_edit_khoanthu_item.xml
@@ -26,7 +26,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Số tiền chi"
-        android:inputType="number"
+        android:inputType="numberDecimal"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,6 +66,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Ghi chú"
+        android:inputType="text"
         app:layout_constraintTop_toBottomOf="@id/spinner_nguon_tien"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
