--- a/app/src/main/res/layout/business_report_fragment_storage.xml
+++ b/app/src/main/res/layout/business_report_fragment_storage.xml
@@ -99,7 +99,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="So lượng tòn kho"
+                            android:text="Số lượng tồn kho"
                             android:textAlignment="center"
                             android:textColor="@color/black" />
                         <TextView
