--- a/app/src/main/res/layout/business_storage_fragment_quanly.xml
+++ b/app/src/main/res/layout/business_storage_fragment_quanly.xml
@@ -96,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:id="@+id/lb_storage_quanly_ngaybd"
-                    android:text="Tu"
+                    android:text="Từ"
                     android:textColor="@color/black"
                     android:layout_marginStart="15dp"/>
                 <TextView
@@ -113,7 +113,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Den"
+                    android:text="Đến"
                     android:textColor="@color/black"
                     android:layout_marginStart="15dp"/>
                 <TextView
