--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="20dp"
         android:background="@drawable/rounded_edittext"
         android:hint="@string/nhap_email_ten_nguoi_dung"
+        android:inputType="textEmailAddress"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
