--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/background_gradient"
     android:layout_height="match_parent"
+    android:background="@drawable/background_gradient"
     android:paddingLeft="20dp"
-    android:paddingRight="20dp"
->
+    android:paddingRight="20dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -59,11 +58,10 @@
         android:layout_width="match_parent"
         android:layout_height="350dp"
         android:background="@drawable/rounded_content_register"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!-- Exit -->
@@ -73,9 +71,9 @@
         android:layout_height="wrap_content"
 
         android:background="@drawable/ic_exit"
-        app:layout_constraintTop_toTopOf="@id/logan"
         app:layout_constraintBottom_toBottomOf="@id/logan"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/logan" />
 
 
     <!-- Heading -->
@@ -83,173 +81,176 @@
         android:id="@+id/logan"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:gravity="center_vertical|center_horizontal"
         android:text="ĐĂNG KÍ TÀI KHOẢN "
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="25dp"
         android:textStyle="bold"
-        android:textColor="@color/black"
-        android:gravity="center_vertical|center_horizontal"
+        app:layout_constraintBottom_toTopOf="@id/RegisterContent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/RegisterContent"
-        android:layout_marginBottom="20dp"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <EditText
         android:id="@+id/username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Tên người dùng"
-        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/rounded_corners"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZàáâãèéêìíòóôõùúýỳĂÂÊÔƠƯăêôưÀÁÂÃÈÉÊÌÍÒÓÔÕÙÚÝỲĐđ "
         android:drawableStart="@drawable/ic_use_register"
         android:drawablePadding="8dp"
+        android:hint="Tên người dùng"
+        android:inputType="text"
         android:padding="12dp"
-        android:background="@drawable/rounded_corners"
-        android:layout_marginTop="26dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toTopOf="@+id/RegisterContent"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="@id/RegisterContent"
         app:layout_constraintStart_toStartOf="@id/RegisterContent"
-        app:layout_constraintEnd_toEndOf="@id/RegisterContent" />
+        app:layout_constraintTop_toTopOf="@+id/RegisterContent" />
 
     <!-- Email người dùng -->
     <EditText
         android:id="@+id/email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Nhập email của bạn"
-        android:textColor="@color/black"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/rounded_corners"
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="8dp"
+        android:hint="Nhập email của bạn"
+        android:inputType="textEmailAddress"
         android:padding="12dp"
-        android:background="@drawable/rounded_corners"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@id/username"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/username" />
 
     <!-- Mật khẩu -->
     <EditText
         android:id="@+id/password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Nhập mật khẩu"
-        android:textColor="@color/black"
-        android:inputType="textPassword"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/rounded_corners"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="8dp"
+        android:hint="Nhập mật khẩu"
+        android:inputType="textPassword"
         android:padding="12dp"
-        android:background="@drawable/rounded_corners"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@id/email"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/email" />
 
     <!-- Xác nhận mật khẩu -->
     <EditText
         android:id="@+id/confirm_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Xác nhận mật khẩu"
-        android:textColor="@color/black"
-        android:inputType="textPassword"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/rounded_corners"
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="8dp"
+        android:hint="Xác nhận mật khẩu"
+        android:inputType="textPassword"
         android:padding="12dp"
-        android:background="@drawable/rounded_corners"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@id/password"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/password" />
 
     <!-- Điều kiện mật khẩu -->
     <TextView
         android:id="@+id/password_requirements_first"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Ít nhất 8 ký tự"
-        android:textSize="12sp"
-        android:textColor="#4CAF50"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="10dp"
         android:drawableStart="@drawable/ic_check"
         android:drawablePadding="8dp"
-        android:layout_marginTop="12dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@id/confirm_password"
+        android:text="Ít nhất 8 ký tự"
+        android:textColor="#4CAF50"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/confirm_password" />
 
     <TextView
         android:id="@+id/password_requirements_second"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Ít nhất 1 số"
-        android:textColor="#4CAF50"
-        android:textSize="12sp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:drawableStart="@drawable/ic_check"
         android:drawablePadding="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@id/password_requirements_first"
+        android:text="Ít nhất 1 chữ số"
+        android:textColor="#4CAF50"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/password_requirements_first" />
 
 
     <TextView
         android:id="@+id/password_requirements_third"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Cả chữ hoa và chữ thường"
-        android:textColor="#4CAF50"
-        android:textSize="12sp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:drawableStart="@drawable/ic_check"
         android:drawablePadding="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintTop_toBottomOf="@id/password_requirements_second"
+        android:text="Cả chữ hoa và chữ thường"
+        android:textColor="#4CAF50"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/password_requirements_second" />
 
     <!-- Điều khoản và điều kiện -->
     <CheckBox
         android:id="@+id/checkbox_terms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bằng cách đồng ý với các điều khoản và điều kiện, bạn đang ký kết hợp đồng ràng buộc về mặt pháp lý với nhà cung cấp dịch vụ."
-        android:textSize="12sp"
-        android:textColor="@color/black"
         android:layout_marginTop="14dp"
-        app:layout_constraintTop_toBottomOf="@id/RegisterContent"
+        android:text="Bằng cách đồng ý với các điều khoản và điều kiện, bạn đang ký kết hợp đồng ràng buộc về mặt pháp lý với nhà cung cấp dịch vụ."
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/RegisterContent" />
 
     <!-- Nút đăng ký -->
     <Button
         android:id="@+id/btn_signup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:textStyle="bold"
-        android:backgroundTint="#CBE77D"
-        android:textColor="#385A42"
         android:layout_marginTop="16dp"
+        android:backgroundTint="#CBE77D"
         android:padding="12dp"
-        app:layout_constraintTop_toBottomOf="@id/checkbox_terms"
+        android:text="Xác nhận đăng ký"
+        android:textColor="#385A42"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/checkbox_terms" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
