--- a/app/src/main/res/layout/item_salary.xml
+++ b/app/src/main/res/layout/item_salary.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tvMainTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This is Main Title"
+        android:text="Thu nhập"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         android:textStyle="bold"
