--- a/app/src/main/res/layout/ui_dialog_add_expense.xml
+++ b/app/src/main/res/layout/ui_dialog_add_expense.xml
@@ -10,16 +10,17 @@
         android:id="@+id/etCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter category (e.g., Food)"
+        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZàáâãèéêìíòóôõùúýỳĂÂÊÔƠƯăêôưÀÁÂÃÈÉÊÌÍÒÓÔÕÙÚÝỲĐđ "
+        android:hint="Nhập danh mục (ví dụ: Đồ ăn, Di chuyển, vv...)"
         android:inputType="text"
-        android:maxLines="1"/>
+        android:maxLines="1" />
 
     <!-- Input cho số tiền -->
     <EditText
         android:id="@+id/etAmount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter amount"
+        android:hint="Nhập số lượng"
         android:inputType="numberDecimal" />
 
     <!-- Nút chọn ngày -->
@@ -27,30 +28,33 @@
         android:id="@+id/btnPickDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Pick Date" />
+        android:text="Chọn ngày" />
 
     <!-- Hiển thị ngày đã chọn -->
     <TextView
         android:id="@+id/tvSelectedDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Selected Date: None"
-        android:paddingTop="8dp" />
+        android:paddingTop="8dp"
+        android:text="Ngày đã chọn: không có" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/tvSelectedCheck"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tiền Thu"
             android:paddingTop="8dp"
-            android:paddingEnd="10dp"/>
+            android:paddingEnd="10dp"
+            android:text="Tiền Thu" />
+
         <CheckBox
             android:id="@+id/checkbox"
             android:layout_width="20dp"
-            android:layout_height="20dp"/>
+            android:layout_height="20dp" />
     </LinearLayout>
 
     <!-- Nút lưu -->
@@ -59,7 +63,7 @@
         android:id="@+id/btnSaveExpense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save Expense"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:text="Lưu" />
 
 </LinearLayout>
